--- a/src/pages/home/Banner/Banner.scss
+++ b/src/pages/home/Banner/Banner.scss
@@ -26,6 +26,18 @@
         text-transform: uppercase;
         font-size: 1rem;
         line-height: 2;
-        margin-bottom: 1.6rem;
+        margin-bottom: 1.2rem;
+    }
+}
+
+.discount{
+    margin-top: -4rem;
+    margin-left: .8rem;
+    font-size: .8rem;
+    display: inline-block;
+    transform: translateY(-1.4rem);
+
+    & ~ * {
+        transform: translateY(-17px);
     }
 }
