added why choose us section and selected for you on homepage

--- a/src/Components/ImageCollection/Imagecollection.scss
+++ b/src/Components/ImageCollection/Imagecollection.scss
@@ -32,7 +32,7 @@
     color: $color-red;
 
     .oldPrice{
-        color: $color-grey;
+        color: $color-font-grey;
         font-size: 1.4rem;
         text-decoration: line-through;
     }
