--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $color-black: #000000;
-$color-grey: #CECECE;
+$color-grey: #808080;
+$color-font-grey: #CECECE;
 $color-red: #FF0000;
 $color-orange: #FBB03B;
 
