--- a/src/Components/Preview-collection/PreviewCollection.scss
+++ b/src/Components/Preview-collection/PreviewCollection.scss
@@ -5,12 +5,16 @@
      }
 
     @media (max-width: 1024px){
-        margin-bottom: 1.5rem;
+        margin-bottom: 2rem;
     }
     .title{
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media (max-width: 1024px){
+            margin-top: 4rem;
+        }
     }
 }
 
@@ -28,13 +32,18 @@
 
 
 .preview-items{
-    margin-top: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    @media (max-width: 1024px){
+        margin-top: 3rem;
+    }
 }
 
 .heading{
     font-size: 2rem;
 
     @media (max-width: 1024px){
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
