added new menu style and signin component

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,9 @@
     position: relative;
 }
 .appmenu{
-    background: transparent;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-    display: flex !important;
+    // background: transparent;
+    // // position: absolute;
+    // width: 100%;
+    // z-index: 1;
+    // display: flex !important;
 }
