--- a/src/pages/signing/Signin.scss
+++ b/src/pages/signing/Signin.scss
@@ -1,6 +1,10 @@
 .signin-container{
     height: 100vh;
     margin-top: 3rem;
+    
+    @media( max-width: 1024px){
+        height: 115vh;
+    }
 }
 
 .goback-container{
@@ -14,5 +18,11 @@
     @media (max-width: 1024px){
         flex-direction: column;
         justify-content: space-between;
+    }
+
+        .signup{
+            @media (max-width: 1024px){
+            margin-top: 5rem;
+          }
     }
 }
