--- a/src/Components/cart-dropdown/CartDropdown.scss
+++ b/src/Components/cart-dropdown/CartDropdown.scss
@@ -9,6 +9,14 @@
     background-color: white;
     right: 180px;
     z-index: 5;
+
+    @media (max-width: 1024px){
+      // top: 0;
+      left: 0;
+      transform: translateX(-50%, -50%);
+      width: 100%;
+      height: 600px;
+    }
   
     .cart-items {
       height: 100%;
