--- a/src/Components/cart-dropdown/CartDropdown.scss
+++ b/src/Components/cart-dropdown/CartDropdown.scss
@@ -1,17 +1,16 @@
 .cart-dropdown {
     position: absolute;
-    width: 290px;
-    height: 450px;
+    width: 20rem;
+    height: 30rem;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
     border: 1px solid black;
     background-color: white;
     right: 180px;
     z-index: 5;
 
     @media (max-width: 1024px){
-      // top: 0;
       left: 0;
       transform: translateX(-50%, -50%);
       width: 100%;
@@ -19,11 +18,12 @@
     }
   
     .cart-items {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      // overflow-y: scroll;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+     overflow-y: scroll;
     }
+
   
     button {
       margin-top: auto;
